bug(reset password): fix reset password confirm url. - Change the url in the email templates so as to redirect user to the UI [Fixes #166348255]

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -211,7 +211,7 @@
                         <tr>
                           <td align="center">
                             <div>
-                              <a id="Link" href="{{domain}}/api/users/reset_password_confirm?uid={{uid}}&token={{token}}" class="button button--blue">Change Password</a>
+                              <a id="Link" href="{{domain}}/password_confirm?uid={{uid}}&token={{token}}" class="button button--blue">Change Password</a>
                             </div>
                           </td>
                         </tr>
@@ -227,7 +227,7 @@
                               and paste the URL below into your web browser.
                             </p>
                             <p class="sub">
-                              <p class="sub"><a href="{{action_url}}">{{domain}}/api/users/reset_password_confirm?uid={{uid}}&token={{token}}</a></p>
+                              <p class="sub"><a href="{{action_url}}">{{domain}}/password_confirm?uid={{uid}}&token={{token}}</a></p>
                             </p>
                           </td>
                         </tr>
